Fixed grid too wide

--- a/styles/Kontakt.module.css
+++ b/styles/Kontakt.module.css
@@ -16,7 +16,7 @@
 
 .container{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-gap: 1rem;
     position: relative;
     width: 100%;
